# Voice-Typing

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BUGFIX_ROUND_2.md  BUGFIX_ROUND_3_DEBUG.md  BUGS_FIXED.md  BUILD_EXE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_APPLIED.md  LAUNCHER_GUIDE.md  PROMOTION_GUIDE.md  PUBLISH_RELEASE_GUIDE.md  QUICKSTART_UI.md  README.md  REDDIT_POSTS.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  UI_MODERNIZATION_SUMMARY.md  VISUAL_FEATURES_SHOWCASE.md  bash.exe.stackdump  config.example.yaml  create_desktop_shortcut.ps1  launch.bat  launch_voice_typing.bat  launch_voice_typing_silent.vbs  launch_vype.bat  launch_vype_silent.vbs  pyproject.toml  run_vype.py  test_new_features.py  vype.spec  vype_installer.iss
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
docs/: V2_DESIGN.md  V2_MOBILE_DESIGN.md  architecture.md  building.md  configuration.md  development.md  installation.md  ui_modernization.md
docs/archive/: COMPLETION_REPORT.md  FEATURE_UPDATES_SUMMARY.md  IMPLEMENTATION_COMPLETE_VYPE.md  IMPROVEMENTS_COMPLETE.md  README.md
mobile/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mobile/public/: manifest.webmanifest  sw.js
mobile/src/: api.ts  gestures.ts  idb.ts  main.ts  queue.ts  recorder.ts  store.ts  style.css  wav.ts
mobile/tests/: api.test.ts  gestures.test.ts  queue.test.ts  store.test.ts  wav.test.ts
scripts/: build_portable.py  download_models.py  setup_dev.py
src/voice_typing/: __init__.py  __main__.py  controller.py
src/voice_typing/audio/: capture.py
src/voice_typing/commands/: __init__.py  definitions.py
src/voice_typing/config/: __init__.py  manager.py  schema.py
src/voice_typing/output/: __init__.py  handler.py
src/voice_typing/output/strategies/: __init__.py  clipboard.py  keyboard.py
src/voice_typing/stt/: __init__.py  text_processor.py  whisper_engine.py
src/voice_typing/ui/: __init__.py  overlay.py  settings_window.py  tray.py
src/voice_typing/utils/: logger.py  system.py
src/vype/: __init__.py  __main__.py  app.py  cleanup.py  config.py  controller.py  fsm.py  gpu_setup.py  history.py  hotkey.py  inject.py  notes.py  pipeline.py  recorder.py  server.py
src/vype/audio/: __init__.py  capture.py
src/vype/brain/: __init__.py  context_summarizer.py  intent_router.py  ollama_client.py  refiner.py
src/vype/commands/: processor.py
src/vype/config/: __init__.py  manager.py  schema.py
src/vype/output/: handler.py
src/vype/output/strategies/: uia.py
src/vype/skills/: __init__.py  command_executor.py  learned_commands.py  post_processor.py
src/vype/stt/: __init__.py  canary_engine.py  model_manager.py  model_tester.py  openai_api.py  parakeet.py  progressive_transcriber.py  whisper.py  whisper_engine.py
src/vype/ui/: __init__.py  caption.py  caret.py  effects.py  gpu_dialog.py  history_popup.py  hotkey.py  hotkey_capture.py  hotkey_win32.py  integrated_output.py  overlay.py  pill.py  settings.py  settings_window.py  spectrum_analyzer.py  tray.py
src/vype/utils/: __init__.py  logger.py
tests/: conftest.py
tests/integration/: test_engines_real.py
tests/manual/: README.md  test_new_features.py  test_ui_modernization.py
tests/unit/: test_audio_capture.py  test_cleanup.py  test_command_processor.py  test_config.py  test_config_manager.py  test_fsm.py  test_gpu_setup.py  test_history.py  test_hotkey.py  test_hotkey_win32.py  test_inject.py  test_notes.py  test_output_handler.py  test_pipeline.py  test_recorder.py  test_server.py  test_stt.py  test_stt_engine.py
