[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vype"
version = "2.0.0a1"
description = "Vype V2 - hold a key, talk, release, and your words appear at the cursor"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Josh" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4.6",
    "keyboard>=0.13.5",
    "pyperclip>=1.8.2",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
ui = ["PySide6>=6.6"]
parakeet = ["onnx-asr[gpu]>=0.6"]
whisper = ["faster-whisper>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
vype = "vype.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -m 'not gpu and not audio'"
markers = [
    "gpu: requires a CUDA GPU and real model weights (run locally: pytest -m gpu)",
    "audio: requires a microphone / audio device",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[tool.coverage.run]
source = ["src/vype"]
omit = ["src/vype/ui/*", "src/vype/app.py"]
